feat(config): make request metrics opt-out (enabled by default)
Convert LOG_REQUEST_METRICS from opt-in to opt-out by changing the
default from False to True. This provides operational visibility out of
the box, aligning with the project's philosophy of enabling core
observability features by default.

**Design Decision**

This follows the existing *_ENABLED pattern where core features default
to enabled (e.g., GEMINI_THOUGHT_SIGNATURES_ENABLED=True,
MODELS_CACHE_ENABLED=True). Request metrics provide essential operational
visibility for monitoring API health, performance, and usage patterns.

**Changes**

- src/core/config/schema.py: LOG_REQUEST_METRICS default=False → True
- src/api/metrics.py: Updated error messages to reflect opt-out behavior
- .env.example: Added documentation with opt-out explanation

**Migration**

Existing deployments will see metrics enabled automatically. To disable:
  LOG_REQUEST_METRICS=false

**Testing**

- All 330 unit tests pass
- All 92 integration tests pass

--- a/.env.example
+++ b/.env.example
@@ -138,6 +138,11 @@ MIN_TOKENS_LIMIT="100"
 REQUEST_TIMEOUT="90"
 MAX_RETRIES="2"
 
+# Optional: Metrics and Monitoring
+# Request metrics are enabled by default for operational visibility
+# To disable metrics logging, set LOG_REQUEST_METRICS=false
+LOG_REQUEST_METRICS="true"
+
 # Global Custom Headers (applied to all providers unless overridden)
 # Format: CUSTOM_HEADER_KEY=header_value
 # These headers will be automatically included in API requests
